# bevy_mod_standard_material

./: .gitignore  Cargo.toml  README.md
assets/shaders/: bad_gtao.wgsl  bad_ssao.wgsl  bad_ssgi.wgsl  bad_ssr.wgsl  bad_ssr_use_voxels.wgsl  bicubic.wgsl  contact_shadows.wgsl  contact_shadows2.wgsl  copy_frame_pass.wgsl  debug_view.wgsl  deferred_lighting.wgsl  depth_buffer_raymarching.wgsl  gtao_utils.wgsl  not_restir.wgsl  pbr.wgsl  pbr_functions.wgsl  pbr_functions_deferred.wgsl  post_process_pass.wgsl  prepass_downsample.wgsl  probe.wgsl  really_bad_ssgi.wgsl  sample_restir_gi.wgsl  sampling.wgsl  screen_space_passes.wgsl  select_lod_offset.wgsl  shadows.wgsl  ssr_uv.wgsl  ssr_uv_generate.wgsl  voxel_cache.wgsl  voxel_pass.wgsl
assets/shaders/pathtrace/: blur.wgsl  printing.wgsl  raytrace_bindings_types.wgsl  raytrace_candidates.wgsl  raytrace_example.wgsl  raytrace_reference.wgsl  trace_gpu_types.wgsl  tracing.wgsl  traverse_tlas.wgsl
assets/shaders/screen_space_passes/: bindings.wgsl  blur.wgsl  common.wgsl  pre_blur.wgsl  probe.wgsl  screen_space_passes.wgsl  screen_trace.wgsl  spatial_reuse.wgsl
src/: bind_group_utils.rs  bistro.rs  copy_frame.rs  debug_view.rs  deferred_lighting_pass.rs  helmet.rs  image_window_auto_size.rs  kitchen.rs  load_sponza.rs  main.rs  path_trace.rs  pbr_material.rs  prepass_downsample.rs  screen_space_passes.rs  slow_frame_diag.rs  sphere.rs  voxel_pass.rs
src/taa/: fxaa.wgsl  mod.rs  taa.wgsl
