[package]
name = "bevy_mod_standard_material"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/DGriffin91/bevy", branch = "deferred", features = ["dds", "jpeg"] }
bevy_coordinate_systems = { git = "https://github.com/DGriffin91/bevy_coordinate_systems" }
bevy_mod_bvh = { git = "https://github.com/DGriffin91/bevy_mod_bvh" }
bevy_hanabi = { path = "H:/dev/programming/rust/bevy/hanabi/11/bevy_hanabi", features = ["3d"] }
bitflags = "2.3.2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/bevyengine/bevy"]
bevy = { git = "https://github.com/DGriffin91/bevy", branch = "deferred" }
